--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -1,76 +1,101 @@
-﻿<UserControl x:Class="Flow.Launcher.Plugin.Everything.EverythingSettings"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:helper="clr-namespace:Flow.Launcher.Plugin.Everything.Helper"
-             mc:Ignorable="d" 
-             Loaded="View_Loaded"
-             d:DesignHeight="300" d:DesignWidth="426.4">
-    <Grid Margin="7,50" VerticalAlignment="Top" >
+﻿<UserControl
+    x:Class="Flow.Launcher.Plugin.Everything.EverythingSettings"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helper="clr-namespace:Flow.Launcher.Plugin.Everything.Helper"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="300"
+    d:DesignWidth="426.4"
+    Loaded="View_Loaded"
+    mc:Ignorable="d">
+    <Grid Margin="60,10,0,15" VerticalAlignment="Top">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="2*" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.Resources>
-            <helper:EnumNameConverter x:Key="enumNameConverter"/>
+            <helper:EnumNameConverter x:Key="enumNameConverter" />
         </Grid.Resources>
-        <CheckBox Grid.Row="0" Grid.ColumnSpan="3" x:Name="UseLocationAsWorkingDir" Content="{DynamicResource 
-                  flowlauncher_plugin_everything_use_location_as_working_dir}" 
-                  Margin="10" HorizontalAlignment="Left" />
-        <CheckBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="LaunchHidden" Content="{DynamicResource flowlauncher_plugin_everything_launch_hidden}" 
-                  Margin="10" HorizontalAlignment="Left" />
+        <CheckBox
+            x:Name="UseLocationAsWorkingDir"
+            Grid.Row="0"
+            Grid.ColumnSpan="3"
+            Margin="10,6,18,6"
+            HorizontalAlignment="Left"
+            Content="{DynamicResource flowlauncher_plugin_everything_use_location_as_working_dir}" />
+        <CheckBox
+            x:Name="LaunchHidden"
+            Grid.Row="1"
+            Grid.ColumnSpan="3"
+            Margin="10,6,18,6"
+            HorizontalAlignment="Left"
+            Content="{DynamicResource flowlauncher_plugin_everything_launch_hidden}" />
 
-        <Label Grid.Row="2" Margin="10" Content="{DynamicResource flowlauncher_plugin_everything_editor_path}"  
-               HorizontalAlignment="Left"/>
-        <Label Grid.Row="2" Grid.Column="1" x:Name="EditorPath" Margin="10" HorizontalAlignment="Left" />
-        <Button Grid.Row="2" Grid.Column="2" x:Name="OpenEditorPath" Content="..." Margin="10" 
-                HorizontalAlignment="Left" Click="EditorPath_Clicked"/>
-        <TextBlock Grid.Row="3" Text="{DynamicResource flowlauncher_plugin_everything_customized_title}" Margin="10,0,0,0"  VerticalAlignment="Center"
-                   ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_tooltip}"/>
-        <TextBox  Grid.Row="3"
-                  Grid.Column="1"
-                  TextWrapping="NoWrap" 
-                  VerticalAlignment="Center" 
-                  HorizontalAlignment="Left"
-                  Width="150" 
-                  Height="35"
-                  Margin="0,5,0,0"
-                  TextChanged="CustomizeExplorer" x:Name="CustomizeExplorerBox"/>
-        <TextBlock  Grid.Row="3" Grid.Column="2" Text="{DynamicResource flowlauncher_plugin_everything_customized_args}" VerticalAlignment="Center" Margin="5"
-                       ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_tooltip}"></TextBlock>
-        <TextBox  Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right"
-                  ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_textbox}"
-                  Margin="0,0,5,0" Width="80" Height="35" x:Name="CustomizeArgsBox" TextChanged="CustomizeExplorerArgs"></TextBox>
-        <TextBlock Margin="10 15 10 10" Text="{DynamicResource flowlauncher_plugin_everything_sort_by}" Grid.Row="4"/>
+        <Label
+            Grid.Row="2"
+            Margin="10,6,6,6"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Content="{DynamicResource flowlauncher_plugin_everything_editor_path}" />
+        <Label
+            x:Name="EditorPath"
+            Grid.Row="2"
+            Grid.Column="1"
+            Margin="10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center" />
+        <Button
+            x:Name="OpenEditorPath"
+            Grid.Row="2"
+            Grid.Column="2"
+            MinWidth="80"
+            Margin="10"
+            HorizontalAlignment="Left"
+            Click="EditorPath_Clicked"
+            Content="..." />
+        <TextBlock
+            Grid.Row="3"
+            Margin="10"
+            VerticalAlignment="Center"
+            Text="{DynamicResource flowlauncher_plugin_everything_sort_by}" />
 
-        <ComboBox Grid.Row="4" 
-                  Grid.Column="1" 
-                  Width="200"
-                  Margin="0 10 0 0"
-                  SelectedItem="{Binding SortOption}" 
-                  ItemsSource="{Binding GetSortOptions, Mode=OneWay}"
-                  SelectionChanged="onSelectionChange">
+        <ComboBox
+            Grid.Row="3"
+            Grid.Column="1"
+            Width="200"
+            Margin="10"
+            ItemsSource="{Binding GetSortOptions, Mode=OneWay}"
+            SelectedItem="{Binding SortOption}"
+            SelectionChanged="onSelectionChange">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <TextBlock Text="{Binding Converter={StaticResource enumNameConverter}}"/>
+                        <TextBlock Text="{Binding Converter={StaticResource enumNameConverter}}" />
                     </Grid>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <TextBlock Name ="tbFastSortWarning"  Grid.Row="4" Grid.Column="2" Margin="10 5 10 0" TextAlignment="Left"
-                   Text="{Binding GetSortOptionWarningMessage}"
-                   Visibility ="{Binding FastSortWarningVisibility}"
-                   Foreground="Orange" TextWrapping="Wrap" />
+        <TextBlock
+            Name="tbFastSortWarning"
+            Grid.Row="4"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Margin="10,20,10,20"
+            VerticalAlignment="Center"
+            Foreground="Orange"
+            Text="{Binding GetSortOptionWarningMessage}"
+            TextAlignment="Left"
+            TextWrapping="Wrap"
+            Visibility="{Binding FastSortWarningVisibility}" />
     </Grid>
 </UserControl>
