--- a/Languages/pt-br.xaml
+++ b/Languages/pt-br.xaml
@@ -1,28 +1,28 @@
 ﻿<?xml version="1.0"?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="flowlauncher_plugin_everything_is_not_running">Everything Servisi çalışmıyor</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_query_error">Sorgu Everything üzerinde çalıştırılırken hata oluştu</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_copied">Kopyalandı</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_canot_start">{0} başlatılamıyor</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_open_containing_folder">İçeren klasörü aç</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_open_with_editor">{0} ile aç</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_editor_path">Düzenleyici Konumu</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_copy_path">Konumu Kopyala</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_copy">Kopyala</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_delete">Sil</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_canot_delete">{0} silinemiyor</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_is_not_running">Warning: Everything service is not running</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_query_error">Error while querying Everything</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_copied">Copied</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_canot_start">Can’t start {0}</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_open_containing_folder">Open parent folder</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_open_with_editor">Open with {0}</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_editor_path">Editor Path</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_copy_path">Copy path</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_copy">Copy</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_delete">Apagar</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_canot_delete">Can't delete {0}</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_plugin_name">Everything</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Everything programı yardımıyla diskteki dosyalarınızı arayın.</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Search on-disk files using Everything</system:String>
 
-    <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Programın çalışma klasörü olarak sonuç klasörünü kullan</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Fırlatma gizli</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Use search result's location as executable working directory</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Launch hidden</system:String>
     
     <system:String x:Key="flowlauncher_plugin_everything_sort_by">Sort By</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_name">Name</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_path">Path</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_sort_by_size">Boyut</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_size">Tamanho</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_extension">Extension</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_type_name">Type Name</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_created">Date Created</system:String>
