--- a/Languages/en.xaml
+++ b/Languages/en.xaml
@@ -34,8 +34,8 @@
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_recently_changed">Date Recently Changed</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_accessed">Date Accessed</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_run">Date Run</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_sort_by_ascending">↑</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_sort_by_descending">↓</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_ascending">&#x2191;</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_descending">&#x2193;</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_nonfastsort_warning">Warning: This is not a Fast Sort option, searches may be slow</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_installing_title">Everything Installation</system:String>
